fix:Ganache loading forever being stuck due to project details not loading (#1382)
Fixed Ganache loading forever being stuck because project details loader never resolves/rejects

The project loader is performed using a child spawn that should resolved
or rejects at some point. However, it seems that in some cases (when some
dependencies of the truffle project are missing), the child spawn will
issue an 'exit` event without ever entering the 'error` event.

This is problematic because since this is not trapped properly, the actual
Ganache dependency that is waiting for project loading to happen never
resolves and the Ganache UI is loading forever being stuck in this loop.

To resolves that, the 'exit' signal is now catched as well as the standard
error output of the process. When the child process exits with a bad
error code and as now received the `error` event, a message is now
forwarded within an `Error` object and the standard error output is present
in there.

This removes the infinite loop in Ganache and shows the actual standard
error in the process.

--- a/src/renderer/screens/config/ConfigScreen.scss
+++ b/src/renderer/screens/config/ConfigScreen.scss
@@ -8,6 +8,7 @@
   left: 0px;
   right: 0px;
   width: 100%;
+  overflow: auto;
 
   main {
     width: 100%;
@@ -172,17 +173,12 @@
       align-items: flex-start;
       flex-direction: row;
       margin-bottom: 2rem;
+      justify-content: space-between;
     }
 
     .RowItem {
-      width: 50%;
+      width: calc(50% - 1rem);
       align-items: center;
-      margin-right: 1rem;
-    }
-
-    .RowItem + .RowItem {
-      margin-right: 0;
-      margin-left: 1rem;
     }
 
     input[type='text'], input[type='number'], input[type='file'], select {
@@ -198,6 +194,13 @@
       font-size: 14px;
       border-bottom: 1px solid;
       border-bottom-color: rgba(0, 0, 0, 0.2);
+
+      button {
+        display: block;
+        margin: 0 1em 0 auto;
+        background: transparent;
+        padding: 0;
+      }
 
       &:last-child {
         border-bottom: 0;
